# Graphics_Engineer_Portfolio

./: .gitignore  CMakeLists.txt  README.md  learning_OpenGL.sln
01_OpenGL_Triangle/: learning_OpenGL.vcxproj  learning_OpenGL.vcxproj.filters
01_OpenGL_Triangle/include/: SHADER.h
01_OpenGL_Triangle/src/: main.cpp
assets/: Lighting.md
demos/: CMakeLists.txt
demos/01_OpenGL_Triangle/: CMakeLists.txt
demos/01_OpenGL_Triangle/src/: main.cpp
demos/02_OpenGL_Texture/: CMakeLists.txt  README.md
demos/02_OpenGL_Texture/resources/shaders/: texture.frag
demos/02_OpenGL_Texture/src/: main.cpp
demos/03_OpenGL_3D_Space/: CMakeLists.txt  README.md
demos/03_OpenGL_3D_Space/include/: CAMERA.h
demos/03_OpenGL_3D_Space/src/: main.cpp
demos/04_OpenGL_Light/: CMakeLists.txt  README.md
demos/04_OpenGL_Light/resources/shaders/: basic_lighting.frag  basic_lighting.vert
demos/04_OpenGL_Light/src/: main.cpp
demos/05_OpenGL_Advanced_Light/: CMakeLists.txt  README.md
demos/05_OpenGL_Advanced_Light/include/: SHADER.h
demos/05_OpenGL_Advanced_Light/resources/shaders/: lighting_maps.frag  lighting_maps.vert
demos/05_OpenGL_Advanced_Light/src/: main.cpp
demos/07_OpenGL_Advanced_GL/: CMakeLists.txt
demos/07_OpenGL_Advanced_GL/resources/shaders/: screenShader.frag
demos/07_OpenGL_Advanced_GL/src/: main.cpp
demos/08_OpenGL_Advanced_Rendering/: CMakeLists.txt
demos/08_OpenGL_Advanced_Rendering/resources/shaders/: shader.fs  shader.vs
demos/08_OpenGL_Advanced_Rendering/src/: main.cpp
demos/09_OpenGL_Advanced_Lighting2/: CMakeLists.txt
demos/09_OpenGL_Advanced_Lighting2/resources/shaders/: blend.fs  cube_shader.fs  cube_shader.vs  filter.fs  gauss.fs  lighting_cube.fs  screenShader.fs  upsample.fs
demos/09_OpenGL_Advanced_Lighting2/src/: main.cpp
demos/10_OpenGL_PBR/: CMakeLists.txt
demos/10_OpenGL_PBR/resources/shaders/: cube_shader.fs
demos/10_OpenGL_PBR/src/: main.cpp
